# ExplainMyBody

./: .gitignore  CHANGELOG.md  CHATBOT_IMPLEMENTATION_LOG.md  CHATBOT_LLM_INTEGRATION_GUIDE.md  INBODY_FIELD_MAPPING_ISSUES.md  README.md  UV_QUICKSTART.md  cloudflare-pages.toml  llm2프롬프트.md  migrate_db.py  package-lock.json  pyproject.toml  vercel.json  verify_setup.sh  프로젝트요약.md  프롬프트2수정파일.md  프롬프트시간비교.md
backend/: .env.example  API_SPECIFICATION.md  BACKEND_QUICKSTART.md  NEXT_STEPS_WEEKLY_PLAN.md  README-integration.md  README.md  REORGANIZATION_WALKTHROUGH.md  STRUCTURE.md  app.py  app_state.py  auth.py  check_db_columns.py  database.py  exceptions.py  inbody_matcher.py  init_db.py  main.py  pyproject.toml  pytest.ini  reproduce_ocr.py  reproduce_plan_error.py  test_pydantic_schemas.py
backend/migrations/: 001_update_health_records_body_types.sql  002_add_pgvector_and_embeddings.sql
backend/models/: __init__.py  analysis_report.py  health_record.py  human_feedback.py  llm_interaction.py  paper_concept_relation.py  paper_node.py  user.py  user_detail.py  weekly_plan.py
backend/repositories/: __init__.py  analysis_report_repository.py  health_record_repository.py  neo4j_repository.py  paper_repository.py  user_goal_repository.py  user_repository.py
backend/routers/: __init__.py  analysis.py  auth.py  goals.py  health_records.py  llm.py  users.py
backend/schemas/: README.md  __init__.py  analysis_report.py  auth.py  body_type.py  common.py  health_record.py  human_feedback.py  human_feedback_repository.py  inbody.py  llm.py  llm_input.py  llm_interaction.py  (+3 more)
(+484 files in other folders)
